From version 1.9.6 to 1.9.7:
* Fixed a high risk vulnerability (SQL injection).
* Fixed a bug in the newpoints_addpoints function which wouldn't add/remove points from a user if points had been added/removed in the same page already.

From version 1.9.5 to 1.9.6:
* Settings are now re-cached when installing/uninstalling/activating/deactivating NewPoints plugins.
* Group rules now affected points per visit and points for referral.

From version 1.9.4 to 1.9.5:
* Fixes minor bugs.
* Fixed an SQL error which appeared on the ACP.
* Settings are cached which reduces one query per page.
* Forum Rules and Group Rules are cached resulting in a performance increase.

From version 1.9.3 to 1.9.4:
* Fixed an incompatibility issue with MyBB 1.6.6.

From version 1.9.2 to 1.9.3:
* Fixed bug in the recounting process (related to the income rules).

From version 1.9.1 to 1.9.2:
* Fixed SQL error in Plugins List and Plugins Updates Check pages.

From version 1.9 to 1.9.1:
* Fixed problem regarding points count in quick edit and quick reply - would allow users to get unlimited points by changing the characters number.

From version 1.8 to 1.9:
* Fixed double </span> tag
* Points to View and Points to Post fields are no longer unsigned. (upgrade script must be run)
* Now adds NewPoints' settings to $mybb->settings instead of having duplicates in the settings table (for some reason they were being deleted)

From version 1.7 to 1.8:
* Fixed possible bug in uninstallation, if there was a plugin installed but the file was missing, it would "quit" the uninstallation leaving other plugins installed and possibly causing conflict if you install NewPoints and its plugins again.
* No longer displays setting groups when there are no settings for that plugin.
* Split main plugin file into multiple files - takes less time for the parser to read what's actually required.
* Fixed a small bug in the settings page related to a variable type.