@@ -433,7 +433,7 @@ function newpoints_format_points($points)
 {
 	global $mybb;
 	
-	return $mybb->settings['newpoints_main_curprefix'].number_format($points, intval($mybb->settings['newpoints_main_decimal'])).$mybb->settings['newpoints_main_cursuffix'];
+	return $mybb->settings['newpoints_main_curprefix'].number_format((float)$points, intval($mybb->settings['newpoints_main_decimal'])).$mybb->settings['newpoints_main_cursuffix'];
 }
 
 /**
